# tetris

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  start.sh
Client/: CMakeLists.txt  WindowsToolchain.cmake
Client/include/: ApplicationOverlay.hpp  Config.hpp  ConfigurationManager.hpp  DefaultConfig.hpp  Definitions.hpp  Game.hpp  GameSelectState.hpp  GameState.hpp  LoginState.hpp  NetworkManager.hpp  Overlay.hpp  Setting.hpp  SettingsOverlay.hpp  State.hpp  StateManager.hpp
Client/res/: user_settings.json  user_settings_details.json
Client/src/: ApplicationOverlay.cpp  Config.cpp  ConfigurationManager.cpp  DefaultConfig.cpp  Game.cpp  GameSelectState.cpp  GameState.cpp  LoginState.cpp  Main.cpp  NetworkManager.cpp  Overlay.cpp  Setting.cpp  SettingsOverlay.cpp  StateManager.cpp
Common/include/: Command.hpp  GameDefinitions.hpp  GameLogic.hpp  Log.hpp  Player.hpp  RoundStateType.hpp  Tetramino.hpp  TetraminoType.hpp  Utils.hpp  connection.hpp  network.hpp
Common/src/: GameLogic.cpp  Log.cpp  Player.cpp  Tetramino.cpp  Utils.cpp
Server/: CMakeLists.txt
Server/include/: DEFINITIONS.hpp  Game.hpp  GameServer.hpp  Player.hpp
Server/src/: Game.cpp  GameServer.cpp  Main.cpp
src/: Definitions.hpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  LoginState.cpp  StateManager.cpp  StateManager.hpp  Tetramino.hpp  Utils.cpp  Utils.hpp  game.cpp  game.hpp  main.cpp  tetramino.cpp  tetramino.hpp  utils.cpp  utils.hpp
